networkpolicy/networkpolicy__basic_kafka_setup__minio__exception__app__ingress__ports__9001__nr17__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio--exception--app--ingress--ports--9001--nr17
  namespace: minio
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: ingress-apisix
    ports:
    - protocol: TCP
      port: 9001
